--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,6 +32,7 @@
             android:layout_marginEnd="19dp"
             android:autofillHints=""
             android:fontFamily="@font/quicksand_medium"
+            android:textColor="@color/Secondary_green"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/primary_green"
@@ -39,8 +40,8 @@
 
         <TextView
             android:id="@+id/emailSend"
-            android:layout_width="290dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
             android:layout_below="@+id/emailAddress"
             android:layout_alignParentStart="true"
@@ -55,7 +56,9 @@
             android:gravity="center"
             android:text="Send email"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/Secondary_green" />
+            android:textColor="@color/Secondary_green"
+            app:elevation="10dp"
+            />
 
 
     </RelativeLayout>
