--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -42,8 +42,9 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:textSize="14dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/quicksand_medium"
+        android:textColor="@color/Secondary_green"
         android:hint="Name"
         android:inputType="text"
         android:textColorHint="@color/primary_green"
@@ -61,6 +62,7 @@
         android:textSize="14dp"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/quicksand_medium"
+        android:textColor="@color/Secondary_green"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/primary_green"
@@ -78,6 +80,7 @@
         android:fontFamily="@font/quicksand_medium"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="@color/Secondary_green"
         android:textColorHint="@color/primary_green"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
@@ -92,6 +95,7 @@
         android:textSize="14dp"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/quicksand_medium"
+        android:textColor="@color/Secondary_green"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:textColorHint="@color/primary_green"
@@ -101,23 +105,25 @@
 
     <TextView
         android:id="@+id/registerButton"
-        android:layout_width="290dp"
-        android:layout_height="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="80dp"
+        android:paddingRight="80dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="@font/quicksand_semibold"
+        android:textSize="20dp"
         android:gravity="center"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
 
+        app:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/confirmPass" />
-
-
-
-    <!--    google sign in-->
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
