--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/pastel_red" />
+        android:color="@color/dark_orange" />
 
-    <solid android:color="@color/pastel_red" />
+    <solid android:color="@color/dark_orange" />
 
     <padding
         android:left="1dp"
