--- a/app/src/main/res/drawable/main_button2.xml
+++ b/app/src/main/res/drawable/main_button2.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/primary_blue" />
+        android:color="@color/primary_green" />
 
-    <solid android:color="@color/primary_blue" />
+    <solid android:color="@color/primary_green" />
 
     <padding
         android:left="1dp"
