--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.289">
+        app:layout_constraintVertical_bias="0.289"
+        >
 
         <TextView
             android:id="@+id/forgotPassword"
@@ -31,7 +32,12 @@
             android:layout_marginStart="194dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="232dp"
-            android:text="Forgot password?" />
+            android:text="Forgot password?"
+            android:textColor="@color/Secondary_green"
+            android:fontFamily="@font/quicksand_semibold"
+            app:elevation="10dp"
+
+            />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/googleSignInButton"
@@ -71,6 +77,7 @@
         android:layout_width="290dp"
         android:layout_height="48dp"
         android:autofillHints=""
+        android:textColor="@color/Secondary_green"
         android:textSize="14dp"
         android:layout_marginTop="80dp"
         android:textColorHint="@color/primary_green"
@@ -120,7 +127,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:elevation="10dp"
+        />
 
     <TextView
         android:id="@+id/register"
@@ -135,7 +144,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:elevation="10dp"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -158,6 +168,7 @@
         android:layout_width="290dp"
         android:layout_height="48dp"
         android:autofillHints=""
+        android:textColor="@color/Secondary_green"
         android:fontFamily="@font/quicksand_medium"
         android:hint="Password"
         android:inputType="textPassword"
