--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -14,8 +14,8 @@
         android:background="@drawable/main_button2"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
-        android:paddingLeft="29dp"
-        android:paddingRight="29dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:text="Get Premium"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
@@ -33,39 +33,53 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Premium Plan"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/quicksand_bold"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="48dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$4.99/month"
+        android:fontFamily="@font/quicksand_bold"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="125dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+         />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="Premium Features"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="190dp"
-        tools:ignore="MissingConstraints" />
+        android:fontFamily="@font/quicksand_bold"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:textSize="18dp"
+        android:layout_marginBottom="90dp"
         android:text="• Get prices of each item\n
         \n• Get help from an expert on call\n
-        \n• Add upto 100 items in list\n"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="231dp"
-        tools:ignore="MissingConstraints" />
+        \n• Add upto 100 items in list"
+        app:layout_constraintBottom_toTopOf="@+id/payButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
