--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,8 @@
     <color name="button_green">#68926B</color>
     <color name="Secondary_green">#274B28</color>
     <color name="primary_green">#93BBA5</color>
+    <color name="lavender2">#d8e4ff</color>
+
 
     <!--Theme Color range-->
     <color name="night_mode">#6124B1</color>
