--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -65,9 +65,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="286dp"
-        android:layout_height="57dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_bold"
+        android:textSize="45dp"
         android:gravity="center"
         android:text="Reset Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
