--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.289"
+        app:elevation="10dp"
         >
 
         <TextView
             android:id="@+id/forgotPassword"
-            android:layout_width="120dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
@@ -59,10 +60,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="163dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:fontFamily="@font/quicksand_bold"
+        android:textSize="50dp"
         android:gravity="center"
         android:text="Log in"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -86,7 +88,8 @@
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        />
 
     <!--    <Button-->
     <!--        android:id="@+id/login"-->
@@ -118,7 +121,7 @@
         android:id="@+id/signin"
         android:layout_width="290dp"
         android:layout_height="42dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="42dp"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
         android:background="@drawable/rounded_corner"
