--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_green"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/linearLayout"
@@ -20,76 +19,98 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.289"
-        app:elevation="10dp"
+
         >
 
         <TextView
             android:id="@+id/forgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="32dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="194dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="232dp"
+            android:fontFamily="@font/quicksand_semibold"
             android:text="Forgot password?"
             android:textColor="@color/Secondary_green"
-            android:fontFamily="@font/quicksand_semibold"
             app:elevation="10dp"
 
             />
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/googleSignInButton"
-            android:layout_width="288dp"
-            android:layout_height="42dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="23dp"
-            android:layout_marginBottom="22dp"
+        <!--                <com.google.android.gms.common.SignInButton-->
+        <!--                    android:id="@+id/googleSignInButton"-->
+        <!--                    android:layout_width="280dp"-->
+        <!--                    android:layout_height="42dp"-->
+        <!--                    android:layout_alignParentStart="true"-->
+        <!--                    android:layout_alignParentEnd="true"-->
+        <!--                    android:layout_alignParentBottom="true"-->
+        <!--                    android:layout_marginStart="28dp"-->
+        <!--                    android:layout_marginTop="14dp"-->
+        <!--                    android:layout_marginEnd="23dp"-->
+        <!--                    android:layout_marginBottom="22dp"-->
+        <!--                    android:fontFamily="@font/quicksand_semibold"-->
+        <!--                    android:gravity="center"-->
+        <!--                    android:text="Sign in with Google" />-->
+        <!--        <com.google.android.gms.common.SignInButton-->
+        <!--            android:id="@+id/googleSignInButton"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:visibility="gone" />-->
 
-            android:gravity="center"
-            android:text="Sign in with Google"
-            android:fontFamily="@font/quicksand_semibold" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/googleSignInButton"
+            android:layout_width="290dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="380dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="22dp"
+            android:backgroundTint="#FFF"
+            android:text="Login With Google"
+            android:textColor="@color/black"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:cornerRadius="30dp"
+            android:fontFamily="@font/quicksand_semibold"
+            app:icon="@drawable/googleg_standard_color_18"
+            app:iconPadding="10dp"
+            app:iconTint="#00100D0D"
+            app:iconTintMode="src_atop"
+            tools:ignore="DuplicateIds" />
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="163dp"
+        android:layout_height="60dp"
         android:layout_marginTop="48dp"
         android:fontFamily="@font/quicksand_bold"
-        android:textSize="50dp"
         android:gravity="center"
         android:text="Log in"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/Secondary_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailAddress"
         android:layout_width="290dp"
         android:layout_height="48dp"
-        android:autofillHints=""
-        android:textColor="@color/Secondary_green"
-        android:textSize="14dp"
         android:layout_marginTop="80dp"
-        android:textColorHint="@color/primary_green"
+        android:autofillHints=""
         android:fontFamily="@font/quicksand_medium"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/Secondary_green"
+        android:textColorHint="@color/primary_green"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"
-        />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <!--    <Button-->
     <!--        android:id="@+id/login"-->
@@ -121,46 +142,45 @@
         android:id="@+id/signin"
         android:layout_width="290dp"
         android:layout_height="42dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_corner"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
-        android:background="@drawable/rounded_corner"
-        android:textColor="@color/black"
         android:text="Sign In"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
+        app:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:elevation="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/register"
         android:layout_width="290dp"
         android:layout_height="42dp"
         android:layout_marginBottom="80dp"
+        android:background="@drawable/rounded_corner"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
-        android:background="@drawable/rounded_corner"
-        android:textColor="@color/black"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
+        app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:elevation="10dp"/>
+        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="29dp"
         android:layout_height="20dp"
-        android:gravity="center"
-        android:textSize="14dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textColor="@color/Secondary_green"
         android:fontFamily="@font/quicksand_medium"
+        android:gravity="center"
         android:text="or"
+        android:textColor="@color/Secondary_green"
+        android:textSize="14dp"
         app:layout_constraintBottom_toTopOf="@+id/register"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
@@ -170,14 +190,14 @@
         android:id="@+id/password"
         android:layout_width="290dp"
         android:layout_height="48dp"
+        android:layout_marginTop="14dp"
         android:autofillHints=""
-        android:textColor="@color/Secondary_green"
         android:fontFamily="@font/quicksand_medium"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textSize="14dp"
-        android:layout_marginTop="14dp"
+        android:textColor="@color/Secondary_green"
         android:textColorHint="@color/primary_green"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/emailAddress" />
