--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue">
 
-    <RelativeLayout
-        android:layout_width="370dp"
-        android:layout_height="230dp"
-        android:id="@+id/relativeLayout"
-        android:background="@drawable/main_button2"
-        android:padding="16dp"
+    <com.wajahatkarim3.easyflipview.EasyFlipView
+        android:layout_width="401dp"
+        android:layout_height="284dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        app:flipDuration="400"
+        app:flipEnabled="true"
+        app:flipFrom="front"
+        app:flipType="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -19,57 +23,98 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.255">
 
-        <EditText
-            android:id="@+id/cardNumber"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="51dp"
-            android:ems="10"
-            android:hint="Card Number"
-            android:inputType="textPersonName"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
-
-        <EditText
-            android:id="@+id/Name"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="130dp"
-            android:ems="10"
-            android:hint="Your Name"
-            android:inputType="textPersonName"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
-
-        <EditText
-            android:id="@+id/editTextNumber"
-            android:layout_width="75dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="130dp"
-            android:layout_marginEnd="10dp"
-            android:hint="MM/YY"
-            android:inputType="number"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/cardback" />
 
         <ImageView
-            android:id="@+id/cardType"
-            android:layout_width="111dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="260dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginEnd="0dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="266dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/cardfront" />
 
-    </RelativeLayout>
+        <!--        <EditText-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="16dp"-->
+        <!--            android:layout_marginTop="16dp"-->
+        <!--            android:layout_marginEnd="16dp"-->
+        <!--            android:layout_marginBottom="16dp"-->
+        <!--            android:ems="10"-->
+        <!--            android:hint="Card Number"-->
+        <!--            android:inputType="textPersonName"-->
+        <!--            android:text="Card Number"-->
+        <!--            android:textColor="@color/black"-->
+        <!--            android:textSize="24sp"-->
+        <!--            android:autofillHints="" />-->
+
+
+    </com.wajahatkarim3.easyflipview.EasyFlipView>
+
+    <EditText
+        android:id="@+id/cardNumber"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="551dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="Card Number"
+        android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <EditText
+        android:id="@+id/Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="530dp"
+        android:ems="10"
+        android:hint="Your Name"
+        android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <EditText
+        android:id="@+id/editTextNumber"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="530dp"
+        android:layout_marginEnd="10dp"
+        android:hint="MM/YY"
+        android:inputType="number"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <ImageView
+        android:id="@+id/cardType"
+        android:layout_width="111dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="545dp"
+        android:layout_marginEnd="0dp" />
 
     <Button
         android:id="@+id/payButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="650dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/main_button2"
         android:fontFamily="@font/quicksand_bold"
@@ -88,4 +133,4 @@
 
     </Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
